deployments/03-argocd/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    istio-injection: disabled
