deployments/03-argocd/03-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: infra-gateway
      namespace: istio-system
  hostnames:
    - argocd.${APPLICATIONS.GLOBAL.BASE_URL}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
